--- a/Theme/Create-profile.html
+++ b/Theme/Create-profile.html
@@ -38,32 +38,24 @@
    </script>
   </head>
   <body>
-    <div class="demo" >
+    <!-- <div class="demo" >
    <div class="content">
       <div id="large-header" class="large-header">
-         <canvas id="demo-canvas"></canvas></div></div></div>
+         <canvas id="demo-canvas"></canvas></div></div></div> -->
     <div class="main">
 
-      <nav class="nav-wrapper transparent">
+      <nav class="nav-wrapper white">
         <!-- <div class="container"> -->
           <a href="#" class="brand-logo" id="nav-logo"><i class="fas fa-code"></i> Dev Connector</a>
-          <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="#photos">Developers</a></li>
-            <li><a href="#services">Post</a></li>
-            <li><a href="#contact">Dashboard</a></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
+          <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large right"><i class="material-icons">menu</i></a>
       </nav>
-      <ul id="slide-out" class="sidenav" style="background-color:black;">
+      <ul id="slide-out" class="sidenav">
         <li><div class="user-view">
           <div class="background">
-            <img src="./office.jpg">
+            <img src="./images/office.jpg">
           </div>
           <div class="exp"><i class="material-icons" id="person">person</i></div>
-          <a href="#name"><span class="white-text name">John Doe<a href="#" class="secondary-content">
-            <i class="material-icons white-text">logout</i>
-          </a></span></a>
+          <a href="#name"><span class="white-text name">John Doe</span></a>
           <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
         </div></li>
         <ul class="collection" >
@@ -74,19 +66,19 @@
             <i class="material-icons circle blue white-text" id="face">people</i> Developers
           </li>
           <li class="collection-item">
-            <i class="material-icons circle blue white-text" id="face" style="font-size:1.2rem">message</i> Posts
+            <i class="material-icons circle blue white-text" id="face">message</i> Posts
           </li>
         </ul>
       </ul>
 
         <div class="container" id="CYP">
-          <h2 class="purple-text " style="">Create Your Profile</h2>
-          <h4> <i class="material-icons ep" style="font-size:2.2rem;">person</i>Let's get some information to make your profile stand out</h1>
+          <h2 class="purple-text " >Create Your Profile</h2>
+          <h4> <i class="material-icons ep">person</i>Let's get some information to make your profile stand out</h1>
         </div>
         <br>
         <div class="section">
           <div class="container">
-            <span class="lead c2" style="padding-left:3%;">* = required field</span>
+            <span class="lead c2" >* = required field</span>
           </div>
           <form>
         <div class="row">
@@ -120,7 +112,7 @@
       </div>
       <div class="row">
         <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 white-text">
-          <input id="location" type="text" class="" style="">
+          <input id="location" type="text" class="">
           <label for="location">Location</label>
           <small>City & state suggested (eg. Boston, MA)</small>
         </div>
@@ -134,7 +126,7 @@
       </div>
       <div class="row">
         <div class="input-field col xs12 s12 m6 offset-m1 offset-l2 white-text">
-          <input  id="gitname" type="text" class="" style="">
+          <input  id="gitname" type="text" class="">
           <label for="gitname">Github Username</label>
         </div>
       </div>
@@ -151,55 +143,55 @@
         </div>
       </div>
       <div class="row">
-          <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 white-text">
+          <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 blue-text">
           <i class="fab fa-twitter prefix"></i>
-          <input type="email" id="email">
-          <label for="email">Twitter URL</label>
+          <input type="text" id="Twitter">
+          <label for="Twitter">Twitter URL</label>
         </div></div>
       <div class="row">
-          <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 white-text">
+          <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 blue-text">
           <i class="fab fa-facebook prefix"></i>
-          <input type="email" id="email">
-          <label for="email">Facebook URL</label>
+          <input type="text" id="Facebook">
+          <label for="Facebook">Facebook URL</label>
         </div></div>
         <div class="row">
-            <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 white-text">
+            <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 blue-text">
             <i class="fab fa-youtube prefix"></i>
-            <input type="email" id="email">
-            <label for="email">Youtube URL</label>
+            <input type="text" id="Youtube">
+            <label for="Youtube">Youtube URL</label>
           </div></div>
           <div class="row">
-              <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 white-text">
+              <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 blue-text">
               <i class="fab fa-linkedin prefix"></i>
-              <input type="email" id="email">
-              <label for="email">Linkedin URL</label>
+              <input type="text" id="Linkedin">
+              <label for="Linkedin">Linkedin URL</label>
             </div></div>
             <div class="row">
-                <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 white-text">
+                <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 blue-text">
                 <i class="fab fa-instagram prefix"></i>
-                <input type="email" id="email">
-                <label for="email">Instagram URL</label>
+                <input type="text" id="insta">
+                <label for="insta">Instagram URL</label>
               </div></div>
       <div class="row">
         <div class="input-field col xs6 s6 m4 offset-m1 offset-l2 white-text">
-          <button class="btn waves-effect waves-light purple" type="submit" name="action" >Submit
+          <button class="btn waves-effect waves-light blue" type="submit" name="action" >Submit
             <i class="material-icons right">send</i>
           </button>
         </div>
           <div class="input-field col xs6 s6 m4 pull-m2">
-          <button class="btn waves-effect white black-text" type="submit" name="action" >
+          <button class="btn waves-effect white black-text"  >
             <i class="fas fa-arrow-left" ></i><span> Go Back</span>
           </button>
         </div>
       </div>
+    </form>
     </div>
-  </form>
   </div>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js">
+    <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js">
     </script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js">
     </script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js">
-    </script>
+    </script> -->
 </body>
 </html>
