--- a/Theme/posts.html
+++ b/Theme/posts.html
@@ -7,7 +7,7 @@
     <title>Materialize</title>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="./poststyle.css">
+    <link rel="stylesheet" href="./formstyle.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
    <!--Import Google Icon Font-->
