--- a/Theme/profiles.html
+++ b/Theme/profiles.html
@@ -7,6 +7,7 @@
     <title>Materialize</title>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="./formstyle.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
    <!--Import Google Icon Font-->
@@ -47,12 +48,10 @@
        <ul id="slide-out" class="sidenav">
          <li><div class="user-view">
            <div class="background">
-             <img src="./office.jpg">
+             <img src="./images/office.jpg">
            </div>
            <div class="exp"><i class="material-icons" id="person">person</i></div>
-           <a href="#name"><span class="white-text name">John Doe<a href="#" class="secondary-content">
-             <i class="material-icons white-text">logout</i>
-           </a></span></a>
+           <a href="#name"><span class="white-text name">John Doe</span></a>
            <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
          </div></li>
          <ul class="collection">
@@ -63,20 +62,23 @@
              <i class="material-icons circle blue white-text" id="face">people</i> Developers
            </li>
            <li class="collection-item">
-             <i class="material-icons circle blue white-text" id="face" style="font-size:1.2rem">message</i> Posts
+             <i class="material-icons circle blue white-text" id="face" >message</i> Posts
            </li>
          </ul>
        </ul>
-       </div>
+     </div><br><br><br><br>
+       <section>
+
      <div class="container">
        <h2>Developers</h2>
-       <h4 style="margin: 2.52rem 0 1.912rem 0;"><i class="fab fa-connectdevelop"></i>Browse and connect with developers</h4>
+       <h4 id="supr"><i class="fab fa-connectdevelop"></i>Browse and connect with developers</h4>
      </div>
-     <div class="scetion">
+   </section>
+     <div class="section">
        <div class="container">
 
        <div class="profiles">
-    <div class="profile white-text indigo row" style="padding:15px 0px 15px 15px;">
+    <div class="profile white-text indigo row" id="g">
       <div class="col s12 m3 center">
 
       <img
@@ -87,7 +89,7 @@
       <div class="col s12 m5 hide-on-small-only" >
         <div class="container left">
 
-        <h4 style="margin:0 0 0 0">John Doe</h4>
+        <h4 >John Doe</h4>
         <p>Developer at Microsoft</p>
         <p>Seattle, WA</p>
         <a href="profile.html" class="btn red">View Profile</a>
@@ -96,7 +98,7 @@
       <div class="col s12 m5 center hide-on-med-and-up" >
         <div class="container">
 
-        <h4 style="margin:0 0 0 0">John Doe</h4>
+        <h4 >John Doe</h4>
         <p>Developer at Microsoft</p>
         <p>Seattle, WA</p>
         <a href="profile.html" class="btn red">View Profile</a>
