--- a/Theme/add-edu.html
+++ b/Theme/add-edu.html
@@ -9,7 +9,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="./formstyle.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
    <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!-- Compiled and minified JavaScript -->
@@ -22,39 +22,40 @@
        $('.parallax').parallax();
        $('.materialbox').materialbox();
        $('.tabs').tabs();
-       $('.datepicker').datepicker();
+       $('.datepicker').datepicker({
+         disableWeekends:true
+       });
        $('.tooltipped').tooltip();
        $('.scrollspy').scrollSpy();
        $('select').formSelect();
+       $(document).ready(function(){
+       $('.collapsible').collapsible();
+       });
+       $("#Button").click(function(){
+        $(this).toggleClass("my");
+    });
      })
    </script>
   </head>
   <body>
-    <div class="demo" >
+    <!-- <div class="demo" >
    <div class="content">
       <div id="large-header" class="large-header">
-         <canvas id="demo-canvas"></canvas></div></div></div>
+         <canvas id="demo-canvas"></canvas></div></div></div> -->
     <div class="main">
-      <nav class="nav-wrapper transparent">
+
+      <nav class="nav-wrapper white">
         <!-- <div class="container"> -->
           <a href="#" class="brand-logo" id="nav-logo"><i class="fas fa-code"></i> Dev Connector</a>
-          <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="#photos">Developers</a></li>
-            <li><a href="#services">Post</a></li>
-            <li><a href="#contact">Dashboard</a></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
+          <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large right"><i class="material-icons">menu</i></a>
       </nav>
-      <ul id="slide-out" class="sidenav" style="background-color:black!important;">
+      <ul id="slide-out" class="sidenav">
         <li><div class="user-view">
           <div class="background">
-            <img src="./office.jpg">
+            <img src="./images/office.jpg">
           </div>
           <div class="exp"><i class="material-icons" id="person">person</i></div>
-          <a href="#name"><span class="white-text name">John Doe<a href="#" class="secondary-content">
-            <i class="material-icons white-text">logout</i>
-          </a></span></a>
+          <a href="#name"><span class="white-text name">John Doe</span></a>
           <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
         </div></li>
         <ul class="collection">
@@ -65,7 +66,7 @@
             <i class="material-icons circle blue white-text" id="face">people</i> Developers
           </li>
           <li class="collection-item">
-            <i class="material-icons circle blue white-text" id="face" style="font-size:1.2rem">message</i> Posts
+            <i class="material-icons circle blue white-text" id="face" >message</i> Posts
           </li>
         </ul>
       </ul>
@@ -73,12 +74,12 @@
 
         <div class="container" id="CYP">
           <h2 class="purple-text" style="">Add Your Education</h2>
-          <h5> <i class="material-icons" style="font-size:2.2rem;">school</i> Add any school, bootcamp, etc that you have attended</h5>
+          <h5> <i class="material-icons" >school</i> Add any school, bootcamp, etc that you have attended</h5>
         </div>
         <br>
         <div class="section">
           <div class="container">
-            <span class="lead c2" style="padding-left:3%;">* = required field</span>
+            <span class="lead c2">* = required field</span>
           </div>
           <form class="" action="index.html" method="post">
           <div class="row">
@@ -95,7 +96,7 @@
       </div>
       <div class="row">
         <div class="input-field col xs12 s12 m4 offset-m1 offset-l2 white-text">
-          <input id="fos" type="text" class="" style="">
+          <input id="fos" type="text" class="" >
           <label for="fos">Field Of Study</label>
         </div>
       </div>
@@ -107,15 +108,15 @@
         </div>
         <div class="input-field col xs12 s12 m3 l2">
           <i class="material-icons prefix">date_range</i>
-          <input type="text" id="date" class="datepicker">
-          <label for="date">To Date</label>
+          <input type="text" id="date1" class="datepicker">
+          <label for="date1">To Date</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col xs12 s12 m4 offset-m1 offset-l2">
           <label>
             <input type="checkbox">
-            <span style="padding-bottom:1.5rem;font-size:1.5rem;">Current School/Bootcamp</span>
+            <span id="hu">Current School/Bootcamp</span>
           </label>
         </div>
       </div>
@@ -132,7 +133,7 @@
           </button>
         </div>
           <div class="input-field col xs6 s6 m4 pull-m2">
-          <button class="btn waves-effect white black-text" type="submit" name="action" >
+          <button class="btn waves-effect white black-text" >
             <i class="fas fa-arrow-left" ></i><span> Go Back</span>
           </button>
         </div>
@@ -140,11 +141,11 @@
     </form>
     </div>
       </div>
-      <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js">
+      <!-- <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js">
       </script>
       <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js">
       </script>
       <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js">
-      </script>
+      </script> -->
     </body>
     </html>
