--- a/Theme/profile.html
+++ b/Theme/profile.html
@@ -10,6 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
    <!--Import Google Icon Font-->
+<link rel="stylesheet" href="./formstyle.css">
    <style>
       li.text-black{
        padding:8px;
@@ -74,18 +75,19 @@
          </ul>
        </ul>
        </div>
-<div class="container" style="margin:10px auto;">
-  <button class="btn waves-effect white black-text" style="margin:10px auto" type="submit" name="action" >
+       <br><br><br>
+<div class="container" id="defs">
+  <button class="btn waves-effect white black-text" type="submit" name="action" >
     <i class="fas fa-arrow-left" ></i><span> Back To Profiles</span>
   </button>
-  <div class="center indigo white-text" style="padding:40px 0 40px 0;">
+  <div class="center indigo white-text" id="buf">
     <img
       class="circle responsive-img"
       src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=200"
       alt="">
-      <h2 style="margin:0 0 0 0;padding-bottom:10px">John Doe</h2>
-      <h5 style="padding-bottom:0px">Developer at Microsoft</h5>
-      <p  style="padding-bottom:10px">Seattle, WA</p>
+      <h2>John Doe</h2>
+      <h5 >Developer at Microsoft</h5>
+      <p >Seattle, WA</p>
       <div class="center" style="font-size:3rem;">
       <i class="fas fa-globe"></i>
       <i class="fab fa-twitter">twitter</i>
@@ -98,12 +100,12 @@
 </div>
 <div class="container">
     <div class="center" >
-      <div class="" style="background-color:#f4f4f4;padding:40px 0 40px 0;">
+      <div class="" id="ch">
       <h5>John's Bio</h5>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed doloremque nesciunt, repellendus nostrum deleniti recusandae nobis neque modi perspiciatis similique?</p>
-      <hr class="divider" style="width:75%;margin:40px auto">
+      <hr class="divider">
       <h5>Skill Set</h5>
-      <ul style="display:flex;justify-content:center;margin:20px auto">
+      <ul >
         <li class="text-black">
           <i class="fas fa-check"></i> HTML
         </li>
@@ -123,9 +125,9 @@
     </div>
   </div>
 </div>
-<div class="container" style="margin:20px auto">
+<div class="container" id="madar" >
 <div class="row">
-  <div class="col s12 m6"  style="border: #ccc solid 1px; padding:10px;">
+  <div class="col s12 m6" id="set" >
       <h4>Experience</h4>
       <h5>Microsoft</h5>
       Oct 2011 -Current
@@ -133,7 +135,7 @@
       <p><strong>Description</strong></p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
     </div>
-    <div class="col s12 m6"  style="border: #ccc solid 1px; padding:10px;">
+    <div class="col s12 m6"  id="seet">
         <h4>Education</h4>
         <h5>Microsoft</h5>
         Oct 2011 -Current
